website/tests/snapshots/types/maybe.exp
=== block 1 ===
Error ------------------------------------------------------------------------------- -:10:20

Cannot call `acceptsMaybeNumber` with `"42"` bound to `value` because string [1] is incompatible with number [2].
[incompatible-type]

   -:10:20
   10| acceptsMaybeNumber("42");      // Error!
                          ^^^^ [1]

References:
   -:2:37
    2| function acceptsMaybeNumber(value: ?number) {
                                           ^^^^^^ [2]


Found 1 error

=== block 2 ===
Error --------------------------------------------------------------------------------- -:8:1

Cannot call `acceptsNull` because: [incompatible-type]
 - Either undefined [1] is incompatible with null [2].
 - Or undefined [1] is incompatible with number [3].

Flow is showing the union/intersection branches that got closest to passing. Other branches were less compatible and are
not shown. To see all branches, re-run Flow with --show-all-branches.

   -:8:1
   8| acceptsNull();     // Error! Argument is required.
      ^^^^^^^^^^^

References:
   -:8:1
   8| acceptsNull();     // Error! Argument is required.
      ^^^^^^^^^^^^^ [1]
   -:2:38
   2| function acceptsNull(value: number | null) {
                                           ^^^^ [2]
   -:2:29
   2| function acceptsNull(value: number | null) {
                                  ^^^^^^ [3]


Found 1 error

=== block 3 ===
Error -------------------------------------------------------------------------------- -:7:18

Cannot call `acceptsMaybeProp` with object literal bound to the first parameter because property `value` is missing in
object literal [1] but exists in object type [2]. [incompatible-type]

   -:7:18
   7| acceptsMaybeProp({});                 // Error!
                       ^^ [1]

References:
   -:2:36
   2| function acceptsMaybeProp({value}: {value: ?number}) {
                                         ^^^^^^^^^^^^^^^^ [2]


Found 1 error

=== block 4 ===
No errors!

=== block 5 ===
No errors!

=== block 6 ===
No errors!
